testsuite/poke.pkl/struct-types-diag-2.pk
/* { dg-do compile } */

/* Function types cannot appear in the definition of a struct
   element.  */

type Packet = struct
  {
    fun()void foo; /* { dg-error "" } */
  };
